# axiom

./: .gitignore  .htaccess  Cargo.toml  Dockerfile  README.md  build.rs  config.example.toml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pyrightconfig.json  requirements.txt
.zed/: settings.json
auth_sdks/javascript/: index.js  package.json
auth_sdks/python/: axiom.py  setup.py
auth_sdks/rust/: Cargo.toml
auth_sdks/rust/src/: lib.rs
benches/: bench_db.go  bench_db.py
demos/: demo_auth_flow.go  demo_db_drop_tables.go  demo_db_fetch_data.go  demo_db_insert_data.go  demo_federation_script.go  demo_fs_file_upload.go  demo_graphql_api.go  demo_mcp_client.go  demo_sse_client.go  demo_webhook_receiver.go  demo_websocket_messaging.go  go.mod  main.go  run_all_demos.ps1
docs/: API.md  CONFIGURATION.md  CONTRIBUTING.md  FEDERATION.md  FEDERATION_GRPC_PLAN.md  MCP.md  SECURITY.md  WEBHOOKS.md
docs/community/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
docs/features/: API.md  AUTH.md  FEDERATION.md  MCP.md  WEBHOOKS.md
docs/migration/: FINAL_RUST_MIGRATION_PROMPT.md  RUST_MIGRATION_PROMPT.md
docs/system/: ARCHITECTURE.md  CONFIGURATION.md  DEPLOYMENT.md  SECURITY.md
docs/use/: how_to_run.md
how_to_use/: admin_test.js  demo_auth_flow.js  demo_db_drop_tables.js  demo_db_fetch_data.js  demo_db_insert_data.js  demo_federation_test.js  demo_fs_file_upload.js  demo_graphql_api.js  demo_mcp_client.js  demo_sse_client.js  demo_webhook_receiver.js  demo_websocket_messaging.js  drop_tables.js  fetch_databases.js  package.json  send_data.js  upload.js  webhokk_tool.js
proto/: buf.yaml
proto/axiom/v1/: common.proto  db.proto  federation.proto  fs.proto  webhook.proto
rust_extensions/axiom_core/: Cargo.toml
rust_extensions/axiom_core/src/: lib.rs
rust_extensions/axiom_core/src/webhook/: circuit_breaker.rs  emitter.rs  mod.rs  persistence.rs  queue.rs  signer.rs
scripts/: build_rust.py  generate_proto.py  rustify.py
src/: __init__.py  main.py  main.rs  passenger_wsgi.py
src/api/: docs.rs  errors.py  errors.rs  mod.rs  responses.py
src/api/admin/: handlers.py
src/api/auth/: anon_cleanup.py  brute_force.py  dependencies.py  email_transport.py  handlers.py  handlers.rs  import_export.py  mod.rs  rate_limiter.py  router.py  router.rs  schemas.py  schemas.rs  template_store.py  token_engine.py  token_engine.rs  totp_engine.py  user_store.py  user_store.rs  webauthn_engine.py  webhook_emitter.py
src/api/core/: health.py  health.rs  metrics.py  metrics.rs
src/api/database/: filter_builder.py  filter_builder.rs  handlers.py  handlers.rs  mod.rs  query_parser.py  router.rs  schemas.py  schemas.rs
src/api/events/: __init__.py  schemas.py
src/api/federation/: common_pb2_grpc.py  grpc_client.py  grpc_server.py  handlers.py  mod.rs  proxy.py  proxy.rs  router.rs  state.py  state.rs  sync.py  sync.rs
src/api/graphql/: __init__.py  compiler.py  compiler.rs  mod.rs  router.py  router.rs
src/api/mcp/: __init__.py  mod.rs  router.py  router.rs  server.py  server.rs  tools.rs
src/api/mcp/resources/: database_resources.py  registry.py  storage_resources.py
src/api/mcp/tools/: base.py  database_tools.py  registry.py  storage_tools.py
src/api/sse/: __init__.py  connection_manager.py  connection_manager.rs  daemons.py  daemons.rs  mod.rs  router.py  router.rs
src/api/storage/: archive.py  chunked_upload.py  chunked_upload.rs  file_ops.py  handlers.py  handlers.rs  image_processor.py  mod.rs  router.rs  streaming.py  streaming.rs
src/api/ws/: __init__.py  connection_manager.py  connection_manager.rs  event_bus.py  event_bus.rs  mod.rs  router.py  router.rs  schemas.rs
src/cache/: __init__.py  memory.py  mod.rs  redis_backend.py  sqlite_backend.py
src/config/: __init__.py  defaults.py  loader.py  loader.rs  provider.py  schema.py  schema.rs
src/db/: mod.rs  pool.py  pool.rs
src/db/dialect/: transpiler.py
src/db/engines/: any.rs  base.py  base.rs  mod.rs  mssql.py  mysql.py  postgres.py  sqlite.py
src/encoding/: __init__.py  proto_utils.py
src/grpc/: mod.rs  server.rs
src/logger/: rotator.py  rotator.rs  setup.py
src/logging/: mod.rs  rotator.rs  setup.rs
src/middleware/: auth.rs  cache.rs  mod.rs  rate_limit.rs  response.rs  waf.rs
src/security/: ban_list.py  ban_list.rs  circuit_breaker.py  mod.rs  storage.py
src/server/: app.py  app.rs  backup_engine.py  backup_engine.rs  lifespan.py  lifespan.rs  mod.rs  telemetry.py  telemetry.rs
src/server/middleware/: auth.py  cors.py  idempotency.py  logging_mw.py  rate_limit.py  request_id.py  security_headers.py  waf.py
src/utils/: mod.rs  size_parser.rs  types.py  types.rs  uuid7.py  uuid_util.rs
src/webhook/: __init__.py  circuit_breaker.py  circuit_breaker.rs  dispatcher.py  dispatcher.rs  dlq.py  dlq.rs  emitter.py  emitter.rs  health.py  mod.rs  persistence.py  persistence.rs  queue.py  queue.rs  router.rs  signer.py  signer.rs
