[package]
name = "axiom_sdk"
version = "1.0.0"
edition = "2021"
description = "Rust SDK for Axiom"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
hex = "0.4.3"
urlencoding = "2.1.3"
