[package]
name = "axiom_core"
version = "0.1.0"
edition = "2021"
description = "Core Rust extensions for the Axiom API"

[lib]
name = "axiom_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
dashmap = "5.5"

hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

tokio = { version = "1.37.0", features = ["full"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
redis = { version = "0.25.3", features = ["tokio-comp"] }
async-nats = "0.35.0"
serde_json = "1.0.116"

uuid = { version = "1.8", features = ["v4"] }
base64 = "0.22.1"

